# whisperX-FastAPI

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXCEPTION_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  Taskfile.yml  alembic.ini  build.sh  coverage.xml  docker-compose.generated.yml  docker-compose.yml  docker-entrypoint.sh  docker.sh  dockerfile  dockerfile-cuda-12.2.0-torch-2.1.0-sk-sl  dockerfile-jap-cuda-12-2-0-torch-2-1-0  pyproject.toml  pytest-report.xml  release-please-config.json  renovate.json  requirements.txt  setup.cfg  sonar-project.properties  start.sh
.claude/: settings.json
.claude/skills/coverage-check/: SKILL.md
.claude/skills/pr-ready/: SKILL.md
.devcontainer/: .env.example  devcontainer.json  docker-compose.yml  post-attach.sh  post-create.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  copilot_story.md  feature_request.md
.github/actions/setup/: action.yaml
.github/instructions/: containerization-docker-best-practices.instructions.md  github-actions-ci-cd-best-practices.instructions.md  markdown.instructions.md  python.instructions.md
.github/workflows/: CI.yaml  copilot-setup-steps.yml  coverage.yaml  deploy-ghcr.yaml  gitleaks.yaml  lint.yaml  precommit-autoupdate.yml  release-please.yml  release.yml  update-lockfile.yml
alembic/: README  env.py
alembic/versions/: 20251025_1758_initial_schema.py
app/: CLAUDE.md  __init__.py  audio.py  callbacks.py  config.py  db.py  docs.py  files.py  gunicorn_logging.conf  logger.py  logging.conf  main.py  middleware.py  models.py  request_context.py  schemas.py  services.py  tasks.py  transcript.py  utils.py  uvicorn_log_conf.yaml  warnings_filter.py  whisperx_services.py
app/api/: CLAUDE.md  __init__.py  audio_api.py  audio_services_api.py  callbacks.py  constants.py  dependencies.py  exception_handlers.py  speaker_api.py  task_api.py  websocket_api.py
app/api/mappers/: __init__.py  speaker_mapper.py  task_mapper.py
app/api/middleware/: __init__.py  deprecation_middleware.py  error_handling.py  request_id.py  request_logging.py  timing.py  utils.py  version_middleware.py
app/api/schemas/: __init__.py  speaker_schemas.py  task_schemas.py  websocket_schemas.py
app/api/v1/: __init__.py  audio_api.py  audio_services_api.py  task_api.py
app/core/: CLAUDE.md  __init__.py  config.py  container.py  exceptions.py  gpu_semaphore.py  logging.py  logging_filters.py  url_validator.py  warnings_filter.py
app/core/logging/: __init__.py  audit_events.py  audit_logger.py  base_config.py  config_builder.py  context.py  dev_config.py  formatters.py  prod_config.py  test_config.py
app/docs/: db_schema.md  openapi.json  openapi.yaml  service_chart.dot
app/domain/: CLAUDE.md  __init__.py
app/domain/entities/: __init__.py  background_task.py  diarization_result.py  speaker_embedding.py  task.py
app/domain/repositories/: __init__.py  speaker_embedding_repository.py  task_repository.py
app/domain/services/: __init__.py  alignment_service.py  diarization_service.py  speaker_assignment_service.py  task_queue.py  transcription_service.py
app/infrastructure/: CLAUDE.md  __init__.py
app/infrastructure/database/: __init__.py  connection.py  models.py  task_repository.py  unit_of_work.py
app/infrastructure/ml/: __init__.py  whisperx_alignment_service.py  whisperx_diarization_service.py  whisperx_speaker_assignment_service.py  whisperx_transcription_service.py
app/infrastructure/tasks/: __init__.py  fastapi_task_queue.py  task_executor.py  task_registry.py
app/observability/: __init__.py  logging_trace.py  metrics.py  tracing.py
app/routers/: __init__.py  stt.py  stt_services.py  task.py
app/services/: CLAUDE.md  __init__.py  audio_processing_service.py  file_service.py  speaker_service.py  task_management_service.py  vad_service.py  websocket_manager.py  whisperx_wrapper_service.py
app/tests/: .test.env  pytest.ini  test_all.py
app/tests/test_files/: aligned_transcript.json  audio_cs.m4a  audio_en.srt  diarazition.json  transcript-wrong.json  (+1 more)
docs/: CLAUDE.md  CONFIGURATION.md  CONFIGURATION_MIGRATION.md  websocket_realtime_transcription.md
docs/api/: migration-guide.md  versioning-strategy.md
docs/architecture/: async-sqlalchemy-concurrency.md  dependency-injection.md  domain-model-pattern.md  exception-handling.md  ml-service-abstraction.md  task-queue.md
docs/database/: QUICKREF.md  README.md
docs/observability/: IMPLEMENTATION.md  README.md  grafana-dashboard.json  metrics.md  tracing.md
docs/operations/: logging.md
requirements/: dev.txt  prod.txt  system.txt
scripts/: create_migration.sh  downgrade_db.sh  init_db.py  update-badges.py  upgrade_db.sh
taskfiles/: Devcontainer.yml  Docker.yml
tests/: CLAUDE.md  __init__.py  conftest.py  pytest.ini  test_all.py  test_audio.py  test_config.py  test_docs.py  test_files.py  test_services.py  test_task_router.py  test_transcript.py  test_validation.py  test_whisperx_services.py
tests/e2e/: conftest.py  test_api_versioning.py  test_audio_processing_endpoints.py  test_callback_endpoints.py  test_health_endpoints.py  test_speaker_endpoints.py  test_task_endpoints.py  test_websocket_endpoints.py
tests/factories/: __init__.py  task_factory.py
tests/fixtures/: __init__.py  database.py  test_container.py
tests/integration/: test_task_lifecycle.py  test_whisperx_services.py
tests/load/: __init__.py  conftest.py  fixtures.py  locustfile.py  test_pool_load.py  test_write_concurrency.py
tests/mocks/: __init__.py  constants.py  mock_alignment_service.py  mock_diarization_service.py  mock_speaker_assignment_service.py  mock_transcription_service.py
tests/test_files/: aligned_transcript.json  audio_en.srt  diarazition.json  transcript-wrong.json  transcript.json
tests/unit/: test_audio.py  test_callbacks.py
(+48 files in other folders)
