[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperx-fastapi"
version = "0.6.0"
description = "WhisperX REST API for audio transcription, alignment, and diarization"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pavel Zbornik", email = "12965149+pavelzbornik@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["whisper", "fastapi", "transcription", "speech-to-text", "diarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "colorlog==6.10.1",
    "dependency-injector>=4.41.0",
    "fastapi==0.135.2",
    "gunicorn==25.3.0",
    "httpx==0.28.1",
    "numba==0.64.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "tqdm==4.67.3",
    "uvicorn==0.42.0",
    "whisperx==3.8.4",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "torch<=2.8.0",
    "torchaudio<=2.8.0",
    "torchvision<=0.23.0",
    "setuptools>=78.1.1",
    # torchcodec has strict 1:1 PyTorch version coupling; 0.7.0 matches torch <=2.8.0
    "torchcodec==0.7.0",
    # whisperx 3.8.4 still uses deprecated use_auth_token parameter removed in 0.36.0
    "huggingface-hub<0.36.0",
    "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]
dev = [
    "locust>=2.20.0",
    "codespell==2.4.2",
    "factory-boy==3.3.3",
    "mypy==1.20.0",
    "pandas-stubs>=2.1.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.8",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
]

[tool.uv]
# PyTorch index configuration with environment markers for platform-specific builds
# CUDA 12.6 on Linux, CPU-only on Windows and macOS

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
triton = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]

[tool.codespell]
skip = ["*.json","*.yaml","*.lock"]
builtin = "clear,rare,informal,usage,code,names"
ignore-words-list = "dne,iam,IAM,ro,jupyter,rouge,ba,thead,master,implementors,UIs,aNULL"

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "/tmp/*",
    "venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
ignore_errors = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
follow_imports = "normal"
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests with all dependencies mocked",
    "integration: Integration tests with real database or external services",
    "e2e: End-to-end tests through API",
    "slow: Slow tests (ML operations, large files)",
    "load: Load / performance tests — require a live server and locust; excluded from CI",
]
addopts = "-v --strict-markers --strict-config"
asyncio_mode = "auto"

[tool.commitizen]
# Commitizen is used only for commit message validation (commit-msg hook).
# Version bumping and changelog generation are handled by release-please.
name = "cz_conventional_commits"

[[tool.mypy.overrides]]
module = [
    "whisperx.*",
    "pyannote.*",
    "torch.*",
    "torchaudio.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
